Update: Backend - 컴파일 로직->비동기, Dto-> POJO로 변경